﻿[B]Changelog[/B]
* Fixed: Vier/Vijf.be moved to new API and requires logging in (Fixes #888)

[I]Previous Changes[/I]
* Fixed: vrt.nu live streams were broken (Fixes #884)
* Fixed: no audio on VRT.nu streams (Fixes #880)
* Fixed: VRT.nu streams moved to Vualto plaform (Fixes #865)
* Fixed: KetNet listing broke (Fixes #866)
* Added: Stievie.be (Fixes #763)
* Added: Recent items to VTM (Fixes #827)
* Fixed: Some streams would start in the middle of a stream (Reverted #854) as it seems to be OK now
* Fixed: Paging for VTM would not work (only Q2)
* Fixed: VTM.be do no longer accept an empty range= header (Fixes #854)
* Changed: Combine HTML site (which only lists shows that have episode available) with the JSON API that has more recent videos per show (Fixes #848)
* Fixed: VTM and Q2 updated their sites which broke the channel (Fixes #846)
* Fixed: VRT.nu regex was causing performance issues (Fixes #842)
* Removed: Canvas as they are now 100% on VRT.nu
* Added: A bit more logging to the VTM.be channel (See #839)
* Fixed: Proper error in logging if VRT log in fails (See #818)
* Fixed: VTM and Q2 streams now always start at the beginning (Fixes #820)
* Added: VRT NU art for all included channels (See #823)
* Fixed: Vier/Vijf.be would also have the audio only streams (Fixes #822)
* Added: VRTnu.be now has listings per channels (Fixes #823)
* Added: VRT.NU dates and Live channels (See #810)
* Fixed: JSON parsing of VTM.be
* Fixed: Vijf.be did not show all episodes (Fixes #815)
* Added: Vijf.be (Fixes #760)
* Changed: no more login required for Vier.be (See #809)
* Added: Q2.be (Fixes #759)
* Added: More VTM programs (See #795)1
* Fixed: VTM has some strange escapes in the JSON
* Fixed: VTM.be streams did not play (Fixes #795)
* Fixed: De Redactie did not show most recent shows (Fixes #439 again)
* Added: VTM.be live TV and full episodes (See #758)
* Added: Initial VTM.be channel (Fixes #758)
* Fixed: Ketnet is switching stream provider (Fixes #780)